--- a/packages/testring-api/package.json
+++ b/packages/testring-api/package.json
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/http-api": "^0.2.11",
-    "@testring/logger": "^0.2.11",
-    "@testring/transport": "^0.2.11",
-    "@testring/types": "^0.2.11",
-    "@testring/web-application": "^0.2.11",
+    "@testring/http-api": "0.2.11",
+    "@testring/logger": "0.2.11",
+    "@testring/transport": "0.2.11",
+    "@testring/types": "0.2.11",
+    "@testring/web-application": "0.2.11",
     "@types/bytes": "^3.0.0",
     "bytes": "^3.0.0"
   }
