--- a/packages/testring-browser-proxy/package.json
+++ b/packages/testring-browser-proxy/package.json
@@ -10,18 +10,18 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "^0.2.11",
-    "@testring/logger": "^0.2.11",
-    "@testring/pluggable-module": "^0.2.11",
-    "@testring/transport": "^0.2.11",
-    "@testring/types": "^0.2.11",
-    "@testring/utils": "^0.2.11",
+    "@testring/child-process": "0.2.11",
+    "@testring/logger": "0.2.11",
+    "@testring/pluggable-module": "0.2.11",
+    "@testring/transport": "0.2.11",
+    "@testring/types": "0.2.11",
+    "@testring/utils": "0.2.11",
     "@types/nanoid": "^1.0.0",
     "@types/yargs": "^11.0.0",
     "nanoid": "^1.1.0",
     "yargs": "^12.0.1"
   },
   "devDependencies": {
-    "@testring/test-utils": "^0.2.11"
+    "@testring/test-utils": "0.2.11"
   }
 }
