--- a/packages/testring-client-ws-transport/package.json
+++ b/packages/testring-client-ws-transport/package.json
@@ -10,8 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/constants": "^0.2.11",
-    "@testring/types": "^0.2.11",
-    "@testring/utils": "^0.2.11"
+    "@testring/constants": "0.2.11",
+    "@testring/types": "0.2.11",
+    "@testring/utils": "0.2.11"
   }
 }
