--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.2.11",
-    "@testring/pluggable-module": "^0.2.11",
-    "@testring/test-utils": "^0.2.11",
-    "@testring/transport": "^0.2.11",
-    "@testring/types": "^0.2.11",
+    "@testring/logger": "0.2.11",
+    "@testring/pluggable-module": "0.2.11",
+    "@testring/test-utils": "0.2.11",
+    "@testring/transport": "0.2.11",
+    "@testring/types": "0.2.11",
     "@types/nanoid": "^1.0.0",
     "@types/request-promise": "^4.1.42",
     "@types/tough-cookie": "^2.3.3",
