--- a/packages/testring-plugin-api/package.json
+++ b/packages/testring-plugin-api/package.json
@@ -10,8 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.2.11",
-    "@testring/types": "^0.2.11",
-    "@testring/utils": "^0.2.11"
+    "@testring/logger": "0.2.11",
+    "@testring/types": "0.2.11",
+    "@testring/utils": "0.2.11"
   }
 }
