--- a/packages/testring-plugin-babel/package.json
+++ b/packages/testring-plugin-babel/package.json
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/plugin-api": "^0.2.11",
+    "@testring/plugin-api": "0.2.11",
     "@types/babel-core": "6.25.5",
     "babel-core": "^6.26.3"
   },
