--- a/packages/testring-sandbox/package.json
+++ b/packages/testring-sandbox/package.json
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "^0.2.11",
-    "@testring/utils": "^0.2.11"
+    "@testring/api": "0.2.11",
+    "@testring/utils": "0.2.11"
   }
 }
