--- a/packages/testring-transport/package.json
+++ b/packages/testring-transport/package.json
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.2.11",
+    "@testring/types": "0.2.11",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.1.0"
   },
   "devDependencies": {
-    "@testring/child-process": "^0.2.11"
+    "@testring/child-process": "0.2.11"
   }
 }
