--- a/packages/testring-utils/package.json
+++ b/packages/testring-utils/package.json
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.2.11",
+    "@testring/types": "0.2.11",
     "@types/resolve": "0.0.8",
     "resolve": "1.8.1"
   }
