--- a/packages/testring-web-application/package.json
+++ b/packages/testring-web-application/package.json
@@ -10,16 +10,16 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/element-path": "^0.2.11",
-    "@testring/logger": "^0.2.11",
-    "@testring/pluggable-module": "^0.2.11",
-    "@testring/types": "^0.2.11",
+    "@testring/element-path": "0.2.11",
+    "@testring/logger": "0.2.11",
+    "@testring/pluggable-module": "0.2.11",
+    "@testring/types": "0.2.11",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.1.0"
   },
   "devDependencies": {
-    "@testring/child-process": "^0.2.11",
-    "@testring/test-utils": "^0.2.11",
-    "@testring/transport": "^0.2.11"
+    "@testring/child-process": "0.2.11",
+    "@testring/test-utils": "0.2.11",
+    "@testring/transport": "0.2.11"
   }
 }
