Refactored commands, refactored types, fixed a lot of small issues with web application and http api

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:publish",
     "cleanup": "lerna clean --yes && lerna exec --parallel -- rimraf ./dist -G && npm run unlink && rimraf ./node_modules",
-    "build": "lerna exec -- tsc --target es2015 && npm run build:recorder && npm run build:extension",
+    "build": "npm run build:main && npm run build:recorder && npm run build:extension",
+    "build:main": "lerna exec -- tsc --target es2015",
     "build:recorder": "lerna run --stream --scope @testring/recorder-frontend build",
     "build:extension": "lerna run --stream --scope @testring/recorder-extension build",
     "build:watch": "lerna exec --parallel -- tsc --target es2015 --watch",
