--- a/packages/testring-dependencies-builder/package.json
+++ b/packages/testring-dependencies-builder/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@testring/test-utils": "0.2.13",
     "@testring/types": "0.2.13",
+    "@testring/utils": "0.2.13",
     "@types/babel-traverse": "^6.25.4",
     "@types/babylon": "^6.16.3",
     "babel-traverse": "^6.26.0",
