--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -14,8 +14,10 @@
     "@testring/transport": "0.2.20",
     "@testring/types": "0.2.20",
     "@testring/utils": "0.2.20",
+    "@types/chalk": "^2.2.0",
     "@types/bytes": "^3.0.0",
     "@types/nanoid": "^1.0.0",
+    "chalk": "^2.4.1",
     "bytes": "^3.0.0",
     "nanoid": "^1.1.0"
   },
