--- a/packages/testring-plugin-selenium-driver/package.json
+++ b/packages/testring-plugin-selenium-driver/package.json
@@ -15,9 +15,11 @@
     "@testring/plugin-api": "0.2.20",
     "@testring/recorder-extension": "0.2.20",
     "@testring/types": "0.2.20",
-    "@types/webdriverio": "4.10.2",
-    "chromedriver": "^2.40.0",
+    "@types/webdriverio": "4.10.3",
+    "@types/deepmerge": "^2.1.0",
+    "chromedriver": "^2.41.0",
+    "deepmerge": "^2.1.1",
     "selenium-server": "^3.13.0",
-    "webdriverio": "4.13.0"
+    "webdriverio": "4.13.1"
   }
 }
