--- a/packages/recorder-frontend/package.json
+++ b/packages/recorder-frontend/package.json
@@ -17,7 +17,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/webpack": "4.4.5",
     "css-loader": "1.0.0",
-    "monaco-editor-webpack-plugin": "^1.4.0",
+    "monaco-editor-webpack-plugin": "1.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-monaco-editor": "0.17.2",
