--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": false,
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
     "preserveConstEnums": true,
     "noEmitOnError": true,
     "declaration": false,
