renamed .storybook to storybook

--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -9,7 +9,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c storybook"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.10",
@@ -23,10 +23,7 @@
     "@types/webpack": "4.4.5",
     "babel-core": "^6.26.3",
     "css-loader": "1.0.0",
-    "monaco-editor-webpack-plugin": "1.4.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-monaco-editor": "0.17.2",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.5.0"
   }
