--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -12,19 +12,19 @@
     "storybook": "start-storybook -p 9001 -c storybook"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-options": "^3.4.10",
+    "@storybook/addon-actions": "3.4.10",
+    "@storybook/addon-options": "3.4.10",
     "@storybook/react": "4.0.0-alpha.16",
-    "@types/storybook__react": "^3.0.9",
-    "@types/storybook__addon-actions": "^3.4.1",
-    "@types/storybook__addon-options": "^3.2.2",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
+    "@types/storybook__react": "3.0.9",
+    "@types/storybook__addon-actions": "3.4.1",
+    "@types/storybook__addon-options": "3.2.2",
+    "@types/react": "16.4.11",
+    "@types/react-dom": "16.0.7",
     "@types/webpack": "4.4.5",
-    "babel-core": "^6.26.3",
+    "babel-core": "6.26.3",
     "css-loader": "1.0.0",
-    "react": "^16.4.1",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.5.0"
+    "react": "16.4.2",
+    "style-loader": "0.21.0",
+    "ts-loader": "4.5.0"
   }
 }
