Removed find-ports from child-process and get-available-ports from test-utils. All methods are using from utils.

--- a/packages/child-process/package.json
+++ b/packages/child-process/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
   },
+  "dependencies": {
+    "@testring/utils": "0.3.6"
+  },
   "author": "RingCentral",
   "license": "MIT"
 }
