--- a/packages/recorder-backend/package.json
+++ b/packages/recorder-backend/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@testring/test-utils": "0.3.6",
+    "@testring/utils": "0.3.6",
     "nodemon": "^1.17.5",
     "request": "2.87.0",
     "request-promise": "4.2.2",
