--- a/packages/dependencies-builder/package.json
+++ b/packages/dependencies-builder/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/pluggable-module": "^0.4.8",
     "@testring/test-utils": "0.4.8",
     "@testring/types": "0.4.8",
     "@testring/utils": "0.4.8",
