--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@testring/api": "0.4.13",
+    "@testring/test-utils": "0.4.13",
+    "@testring/types": "0.4.13",
     "@testring/utils": "0.4.13"
   }
 }
