--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -17,9 +17,9 @@
     "@testring/types": "0.4.19",
     "@types/deepmerge": "^2.1.0",
     "@types/webdriverio": "4.10.3",
-    "chromedriver": "^2.41.0",
+    "chromedriver": "2.41.0",
     "deepmerge": "^2.1.1",
-    "selenium-server": "^3.14.0",
+    "selenium-server": "3.14.0",
     "webdriverio": "4.13.1"
   }
 }
