--- a/packages/plugin-puppeteer/package.json
+++ b/packages/plugin-puppeteer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@testring/web-application",
+  "name": "@testring/plugin-puppeteer",
   "version": "0.4.29",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
@@ -10,16 +10,13 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/element-path": "0.4.29",
-    "@testring/logger": "0.4.29",
-    "@testring/pluggable-module": "0.4.29",
-    "@testring/types": "0.4.29",
-    "@types/nanoid": "^1.2.0",
-    "nanoid": "^1.2.3"
-  },
-  "devDependencies": {
     "@testring/child-process": "0.4.29",
-    "@testring/test-utils": "0.4.29",
-    "@testring/transport": "0.4.29"
+    "@testring/logger": "0.4.29",
+    "@testring/plugin-api": "0.4.29",
+    "@testring/types": "0.4.29",
+    "@types/puppeteer": "1.6.4",
+    "@types/nanoid": "^1.2.0",
+    "puppeteer": "1.8.0",
+    "nanoid": "^1.2.3"
   }
 }
