Fixed versions and @types/node@10.5.6 as own deps cause resolver is sucks and take it as *

--- a/packages/recorder-backend/package.json
+++ b/packages/recorder-backend/package.json
@@ -19,24 +19,25 @@
     "@testring/recorder-frontend": "0.4.31",
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
-    "@types/babel-traverse": "^6.25.4",
-    "@types/koa": "^2.0.46",
-    "@types/koa-static": "^4.0.0",
-    "@types/koa-views": "^2.0.3",
-    "@types/ws": "^5.1.2",
-    "babel-traverse": "^6.26.0",
-    "babel-types": "^6.26.0",
-    "chrome-launcher": "^0.10.2",
-    "koa": "^2.5.2",
-    "koa-static": "^5.0.0",
-    "koa-views": "^6.1.4",
-    "nanoid": "^1.1.0",
-    "ws": "^6.0.0"
+    "@types/babel-traverse": "6.25.4",
+    "@types/koa": "2.0.46",
+    "@types/koa-static": "4.0.0",
+    "@types/koa-views": "2.0.3",
+    "@types/node": "10.5.6",
+    "@types/ws": "5.1.2",
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "chrome-launcher": "0.10.2",
+    "koa": "2.5.2",
+    "koa-static": "5.0.0",
+    "koa-views": "6.1.4",
+    "nanoid": "1.1.0",
+    "ws": "6.0.0"
   },
   "devDependencies": {
     "@testring/test-utils": "0.4.31",
     "@testring/utils": "0.4.31",
-    "nodemon": "^1.17.5",
+    "nodemon": "1.17.5",
     "request": "2.87.0",
     "request-promise": "4.2.2",
     "ts-node": "7.0.0"
