--- a/packages/recorder-extension/package.json
+++ b/packages/recorder-extension/package.json
@@ -21,12 +21,12 @@
     "@testring/utils": "0.4.31",
     "@types/chrome": "0.0.69",
     "@types/webpack": "4.4.5",
-    "mkdirp": "^0.5.1",
-    "nanoid": "^1.0.7",
-    "ncp": "^2.0.0",
-    "nodemon": "^1.18.1",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.0",
+    "mkdirp": "0.5.1",
+    "nanoid": "1.1.0",
+    "ncp": "2.0.0",
+    "nodemon": "1.18.1",
+    "ts-loader": "4.4.2",
+    "ts-node": "7.0.0",
     "webpack": "4.15.1",
     "webpack-cli": "3.0.8"
   }
