--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,7 @@
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
     "@testring/web-application": "0.4.31",
-    "@types/bytes": "^3.0.0",
-    "bytes": "^3.0.0"
+    "@types/bytes": "3.0.0",
+    "bytes": "3.0.0"
   }
 }
