--- a/packages/browser-proxy/package.json
+++ b/packages/browser-proxy/package.json
@@ -16,10 +16,11 @@
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
     "@testring/utils": "0.4.31",
-    "@types/nanoid": "^1.0.0",
-    "@types/yargs": "^11.0.0",
-    "nanoid": "^1.1.0",
-    "yargs": "^12.0.1"
+    "@types/nanoid": "1.0.0",
+    "@types/node": "10.5.6",
+    "@types/yargs": "12.0.0",
+    "nanoid": "1.1.0",
+    "yargs": "12.0.1"
   },
   "devDependencies": {
     "@testring/test-utils": "0.4.31"
