--- a/packages/cli-config/package.json
+++ b/packages/cli-config/package.json
@@ -14,8 +14,8 @@
     "@testring/types": "0.4.31",
     "@testring/utils": "0.4.31",
     "@types/deepmerge": "^2.1.0",
-    "@types/yargs": "^11.0.0",
-    "deepmerge": "^2.1.1",
-    "yargs": "^12.0.1"
+    "@types/yargs": "12.0.0",
+    "deepmerge": "2.1.1",
+    "yargs": "12.0.1"
   }
 }
