--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,7 +22,7 @@
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
     "@testring/web-application": "0.4.31",
-    "@types/yargs": "^11.0.0",
-    "yargs": "^12.0.1"
+    "@types/yargs": "12.0.0",
+    "yargs": "12.0.1"
   }
 }
