--- a/packages/dependencies-builder/package.json
+++ b/packages/dependencies-builder/package.json
@@ -13,9 +13,9 @@
     "@testring/test-utils": "0.4.31",
     "@testring/types": "0.4.31",
     "@testring/utils": "0.4.31",
-    "@types/babel-traverse": "^6.25.4",
-    "@types/babylon": "^6.16.3",
-    "babel-traverse": "^6.26.0",
-    "babylon": "^6.18.0"
+    "@types/babel-traverse": "6.25.4",
+    "@types/babylon": "6.16.3",
+    "babel-traverse": "6.26.0",
+    "babylon": "6.18.0"
   }
 }
