--- a/packages/fs-reader/package.json
+++ b/packages/fs-reader/package.json
@@ -13,6 +13,6 @@
     "@testring/logger": "0.4.31",
     "@testring/pluggable-module": "0.4.31",
     "@testring/types": "0.4.31",
-    "glob": "^7.1.2"
+    "glob": "7.1.2"
   }
 }
