--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -15,11 +15,12 @@
     "@testring/test-utils": "0.4.31",
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
-    "@types/nanoid": "^1.0.0",
-    "@types/request-promise": "^4.1.42",
-    "@types/tough-cookie": "^2.3.3",
-    "nanoid": "^1.1.0",
-    "request-promise": "^4.2.2",
-    "tough-cookie": "^2.4.3"
+    "@types/node": "10.5.6",
+    "@types/nanoid": "1.0.0",
+    "@types/request-promise": "4.1.42",
+    "@types/tough-cookie": "2.3.3",
+    "nanoid": "1.1.0",
+    "request-promise": "4.2.2",
+    "tough-cookie": "2.4.3"
   }
 }
