--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -14,11 +14,12 @@
     "@testring/transport": "0.4.31",
     "@testring/types": "0.4.31",
     "@testring/utils": "0.4.31",
-    "@types/bytes": "^3.0.0",
-    "@types/nanoid": "^1.0.0",
-    "bytes": "^3.0.0",
-    "chalk": "^2.4.1",
-    "nanoid": "^1.1.0"
+    "@types/bytes": "3.0.0",
+    "@types/node": "10.5.6",
+    "@types/nanoid": "1.0.0",
+    "bytes": "3.0.0",
+    "chalk": "2.4.1",
+    "nanoid": "1.1.0"
   },
   "devDependencies": {
     "@testring/test-utils": "0.4.31"
