--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@testring/plugin-api": "0.4.31",
     "@types/babel-core": "6.25.5",
-    "babel-core": "^6.26.3"
+    "babel-core": "6.26.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "6.24.1"
   }
 }
