--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -15,10 +15,11 @@
     "@testring/plugin-api": "0.4.31",
     "@testring/recorder-extension": "0.4.31",
     "@testring/types": "0.4.31",
-    "@types/deepmerge": "^2.1.0",
+    "@types/deepmerge": "2.1.0",
+    "@types/node": "10.5.6",
     "@types/webdriverio": "4.10.3",
     "chromedriver": "2.41.0",
-    "deepmerge": "^2.1.1",
+    "deepmerge": "2.1.1",
     "selenium-server": "3.14.0",
     "webdriverio": "4.13.1"
   }
