--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -11,8 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "@testring/types": "0.4.31",
-    "@types/nanoid": "^1.0.0",
-    "nanoid": "^1.1.0"
+    "@types/node": "10.5.6",
+    "@types/nanoid": "1.0.0",
+    "nanoid": "1.1.0"
   },
   "devDependencies": {
     "@testring/child-process": "0.4.31"
