--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -15,6 +15,7 @@
     "@testring/pluggable-module": "0.4.31",
     "@testring/types": "0.4.31",
     "@types/nanoid": "^1.0.0",
+    "@types/node": "10.5.6",
     "nanoid": "^1.1.0"
   },
   "devDependencies": {
