--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "@testring/types": "0.4.34",
+    "@types/bytes": "3.0.0",
     "@types/node": "10.5.6",
     "@types/resolve": "0.0.8",
+    "bytes": "3.0.0",
     "resolve": "1.8.1"
   }
 }
