--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/api",
-  "version": "0.4.34",
+  "version": "0.4.35",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/http-api": "0.4.34",
-    "@testring/logger": "0.4.34",
-    "@testring/transport": "0.4.34",
-    "@testring/types": "0.4.34",
-    "@testring/web-application": "0.4.34",
-    "@testring/utils": "0.4.34"
+    "@testring/http-api": "0.4.35",
+    "@testring/logger": "0.4.35",
+    "@testring/transport": "0.4.35",
+    "@testring/types": "0.4.35",
+    "@testring/utils": "0.4.35",
+    "@testring/web-application": "0.4.35"
   }
 }
