--- a/packages/child-process/package.json
+++ b/packages/child-process/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "dependencies": {
-    "@testring/utils": "0.4.46"
+    "@testring/utils": "0.4.46",
+    "@testring/types": "0.4.46"
   },
   "author": "RingCentral",
   "license": "MIT"
