--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@testring/pluggable-module": "0.4.46",
     "@testring/transport": "0.4.46",
+    "@testring/child-process": "0.4.46",
     "@testring/types": "0.4.46",
     "@testring/utils": "0.4.46",
     "@types/bytes": "3.0.0",
