--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -10,17 +10,18 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/child-process": "0.4.46",
     "@testring/element-path": "0.4.46",
     "@testring/logger": "0.4.46",
     "@testring/pluggable-module": "0.4.46",
     "@testring/types": "0.4.46",
-    "@types/nanoid": "^1.0.0",
+    "@testring/transport": "0.4.46",
+    "@types/nanoid": "1.0.0",
     "@types/node": "10.5.6",
-    "nanoid": "^1.1.0"
+    "nanoid": "1.1.0",
+    "chai": "4.1.2"
   },
   "devDependencies": {
-    "@testring/child-process": "0.4.46",
-    "@testring/test-utils": "0.4.46",
-    "@testring/transport": "0.4.46"
+    "@testring/test-utils": "0.4.46"
   }
 }
