--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/childe-process": "0.4.46",
+    "@testring/child-process": "0.4.46",
     "@testring/types": "0.4.46",
     "@types/nanoid": "1.0.0",
     "@types/node": "10.5.6",
