--- a/packages/child-process/package.json
+++ b/packages/child-process/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/child-process",
-  "version": "0.4.46",
+  "version": "0.4.47",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -8,8 +8,8 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "dependencies": {
-    "@testring/utils": "0.4.46",
-    "@testring/types": "0.4.46"
+    "@testring/types": "0.4.47",
+    "@testring/utils": "0.4.47"
   },
   "author": "RingCentral",
   "license": "MIT"
