--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/web-application",
-  "version": "0.4.46",
+  "version": "0.4.47",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -10,18 +10,18 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/element-path": "0.4.46",
-    "@testring/logger": "0.4.46",
-    "@testring/pluggable-module": "0.4.46",
-    "@testring/types": "0.4.46",
-    "@testring/transport": "0.4.46",
+    "@testring/element-path": "0.4.47",
+    "@testring/logger": "0.4.47",
+    "@testring/pluggable-module": "0.4.47",
+    "@testring/transport": "0.4.47",
+    "@testring/types": "0.4.47",
     "@types/nanoid": "1.0.0",
     "@types/node": "10.5.6",
-    "nanoid": "1.1.0",
-    "chai": "4.1.2"
+    "chai": "4.1.2",
+    "nanoid": "1.1.0"
   },
   "devDependencies": {
-    "@testring/child-process": "0.4.46",
-    "@testring/test-utils": "0.4.46"
+    "@testring/child-process": "0.4.47",
+    "@testring/test-utils": "0.4.47"
   }
 }
