--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "node": true
   },
   "rules": {
+    "object-curly-spacing": [2, "always"],
     "typescript/member-delimiter-style": 2,
     "typescript/no-unused-vars": 2,
     "no-unused-vars": 0,
