--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "symlinks:remove": "lerna exec --no-sort -- node ../../bin/symlinks-remove",
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
     "lint": "npm run lint:src && npm run lint:test",
-    "lint:src": "lerna exec --parallel -- eslint ./src/**.ts",
-    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**.ts",
+    "lint:src": "lerna exec --parallel -- eslint ./src/**/*.ts",
+    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**/*.ts",
     "test": "lerna exec -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
