--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
     "lint": "npm run lint:src && npm run lint:test",
     "lint:src": "lerna exec --parallel -- eslint ./src/**/*.ts",
-    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**/*.ts",
+    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**/*.[tj]s",
     "test": "lerna exec -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
