--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,15 @@
     "node": true
   },
   "rules": {
+    "func-style": [2, "declaration", {
+      "allowArrowFunctions": true
+    }],
+    "space-before-function-paren": [2, {
+      "anonymous": "always",
+      "named": "never",
+      "asyncArrow": "always"
+    }],
+    "space-before-blocks": [2, "always"],
     "comma-dangle": [2, "always-multiline"],
     "object-curly-spacing": [2, "always"],
     "typescript/member-delimiter-style": 2,
