--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
-    "publish": "npm run generate-readme && lerna publish --exact",
-    "publish:ci": "node ./bin/publish.js",
+    "version": "lerna version --exact",
+    "publish:ci": "lerna publish from-git",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "lerna exec -- npm-check --skip-unused --ignore @testring/*"
   },
@@ -80,7 +80,6 @@
     "lerna": "3.10.2",
     "mocha": "5.2.0",
     "npm-check": "5.9.0",
-    "npm-utils": "2.0.3",
     "nyc": "13.1.0",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.3",
