Removed global lerna exec ignore rule

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "add-package-files": "lerna exec --no-sort -- node ../../bin/add-package-files",
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
     "lint": "npm run lint:src && npm run lint:test",
-    "lint:src": "lerna exec --parallel -- eslint ./src/**/*.ts",
-    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**/*.[tj]s",
-    "test": "lerna exec -- mocha --opts mocha.opts",
+    "lint:src": "lerna exec --parallel --ignore=\"@testring/@(e2e-test-app)\" -- eslint \"./src/**/*.[tj]s\" --fix",
+    "lint:test": "lerna exec --parallel --no-sort --ignore=\"@testring/@(ui-kit|types)\" -- eslint ./test/**/*.[tj]s",
+    "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
@@ -25,10 +25,10 @@
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:publish",
     "build": "npm run build:main && npm run build:recorder && npm run build:extension",
-    "build:main": "lerna exec -- tsc --target es2015",
+    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|recorder-frontend|recorder-extension|ui-kit)\" -- tsc --target es2015",
     "build:recorder": "lerna run --stream --scope @testring/recorder-frontend build",
     "build:extension": "lerna run --stream --scope @testring/recorder-extension build",
-    "build:watch": "lerna exec --parallel -- tsc --target es2015 --watch",
+    "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|recorder-frontend|recorder-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch",
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
