--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "postinstall": "lerna bootstrap --no-ci",
-    "preversion": "npm run build:precommit",
-    "reinstall": "node ./bin/cleanup.js && npm install",
+    "reinstall": "node ./bin/cleanup.js && npm install && npm run build",
     "cleanup": "lerna clean --yes && lerna exec --parallel -- node ../../bin/cleanup",
     "add-package-files": "lerna exec --no-sort -- node ../../bin/add-package-files",
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
