--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
-    "version": "lerna version --exact",
+    "publish:version": "lerna version --exact",
     "publish:ci": "lerna publish from-git",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "lerna exec -- npm-check --skip-unused --ignore @testring/*"
