--- a/packages/cli-config/package.json
+++ b/packages/cli-config/package.json
@@ -13,7 +13,7 @@
     "@testring/logger": "0.4.49",
     "@testring/types": "0.4.49",
     "@testring/utils": "0.4.49",
-    "@types/deepmerge": "^2.1.0",
+    "@types/deepmerge": "2.2.0",
     "@types/yargs": "12.0.0",
     "deepmerge": "2.1.1",
     "yargs": "12.0.1"
