Check packages precommit hook exact versions validation added

--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "build:extension": "lerna run --stream --scope @testring/recorder-extension build",
     "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|recorder-frontend|recorder-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch",
     "build:clear": "npm run lint && npm run build",
-    "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
+    "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish:version": "lerna version --exact",
     "publish:ci": "lerna publish from-git",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
-    "check-deps": "npm run check-deps:root && npm run check-deps:packages",
+    "check-deps": "check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
+    "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
     "check-deps:root": "npm-check -u",
     "check-deps:packages": "lerna exec --no-bail -- npm-check --no-color --no-emoji --ignore @testring/*",
     "check-deps:update": "lernaupdate",
