--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -15,11 +15,9 @@
     "@testring/types": "0.4.49",
     "@testring/utils": "0.4.49",
     "@types/bytes": "3.0.0",
-    "@types/nanoid": "1.0.0",
     "@types/node": "10.5.6",
     "bytes": "3.0.0",
-    "chalk": "2.4.1",
-    "nanoid": "1.1.0"
+    "chalk": "2.4.1"
   },
   "devDependencies": {
     "@testring/test-utils": "0.4.49"
