--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@testring/types": "0.4.49",
     "@types/bytes": "3.0.0",
+    "@types/nanoid": "1.2.0",
     "@types/node": "10.5.6",
     "@types/resolve": "0.0.8",
     "bytes": "3.0.0",
+    "nanoid": "2.0.1",
     "resolve": "1.8.1"
   }
 }
