--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -15,10 +15,9 @@
     "@testring/pluggable-module": "0.4.49",
     "@testring/transport": "0.4.49",
     "@testring/types": "0.4.49",
-    "@types/nanoid": "1.0.0",
+    "@testring/utils": "0.4.49",
     "@types/node": "10.5.6",
-    "chai": "4.2.0",
-    "nanoid": "1.1.0"
+    "chai": "4.2.0"
   },
   "devDependencies": {
     "@testring/child-process": "0.4.49",
