--- a/packages/recorder-backend/package.json
+++ b/packages/recorder-backend/package.json
@@ -22,6 +22,7 @@
     "@testring/utils": "0.4.49",
     "@types/babel-traverse": "6.25.4",
     "@types/koa": "2.0.46",
+    "@types/koa-compose": "3.2.2",
     "@types/koa-static": "4.0.0",
     "@types/koa-views": "2.0.3",
     "@types/node": "10.5.6",
