--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/recorder-extension": "0.4.56",
     "@testring/child-process": "0.4.56",
     "@testring/logger": "0.4.56",
     "@testring/plugin-api": "0.4.56",
