--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish:version": "lerna version --exact",
-    "publish:ci": "lerna publish from-git",
+    "publish:ci": "node ./bin/publish.js",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
     "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
@@ -72,6 +72,10 @@
     ]
   },
   "devDependencies": {
+    "@lerna/batch-packages": "3.13.0",
+    "@lerna/filter-packages": "3.13.0",
+    "@lerna/project": "3.13.1",
+    "@lerna/run-parallel-batches": "3.13.0",
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
     "@types/node": "10.5.6",
@@ -83,10 +87,11 @@
     "eslint-plugin-react": "7.9.1",
     "eslint-plugin-typescript": "0.14.0",
     "glob": "7.1.3",
-    "lerna": "3.10.5",
+    "lerna": "3.13.1",
     "lerna-update-wizard": "0.11.1",
     "mocha": "5.2.0",
     "npm-check": "5.9.0",
+    "npm-utils": "2.0.3",
     "nyc": "13.1.0",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.3",
