@testring/types marked as one of typeRoot

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "dom"
     ],
     "typeRoots": [
+      "./node_modules/@testring/types",
       "./node_modules/@types",
       "../../node_modules/@types"
     ],
