--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -17,9 +17,9 @@
     "@testring/types": "0.4.52",
     "@testring/utils": "0.4.52",
     "@types/node": "10.5.6",
-    "@types/request-promise": "4.1.42",
+    "@types/request-promise-native": "1.0.15",
     "@types/tough-cookie": "2.3.3",
-    "request-promise": "4.2.2",
+    "request-promise-native": "1.0.7",
     "tough-cookie": "2.4.3"
   }
 }
