WIP: initial editor on the page

--- a/packages/recorder-backend/package.json
+++ b/packages/recorder-backend/package.json
@@ -13,12 +13,12 @@
     "start:watch": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/index.ts"
   },
   "dependencies": {
+    "@testring/child-process": "0.4.56",
     "@testring/constants": "0.4.56",
     "@testring/logger": "0.4.56",
-    "@testring/recorder-extension": "0.4.56",
-    "@testring/child-process": "0.4.56",
-    "@testring/recorder-frontend": "0.4.56",
     "@testring/pluggable-module": "0.4.56",
+    "@testring/recorder-extension": "0.4.56",
+    "@testring/recorder-frontend": "0.4.56",
     "@testring/transport": "0.4.56",
     "@testring/types": "0.4.56",
     "@testring/utils": "0.4.56",
@@ -32,9 +32,11 @@
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "chrome-launcher": "0.10.2",
+    "express": "4.16.4",
     "koa": "2.7.0",
     "koa-static": "5.0.0",
     "koa-views": "6.1.5",
+    "redux": "4.0.1",
     "ws": "6.0.0"
   },
   "devDependencies": {
