--- a/packages/recorder-extension/manifest.tpl.json
+++ b/packages/recorder-extension/manifest.tpl.json
@@ -6,7 +6,9 @@
     "48": "icon.png"
   },
   "page_action": {
-    "default_icon": "icon.png"
+    "default_title": "TestRing",
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "background": {
     "scripts": [
@@ -25,6 +27,7 @@
     }
   ],
   "permissions": [
+    "storage",
     "activeTab",
     "contextMenus",
     "tabs"
