--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/async-breakpoints": "0.4.56",
     "@testring/http-api": "0.4.56",
     "@testring/logger": "0.4.56",
     "@testring/transport": "0.4.56",
