--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/async-breakpoints": "0.4.56",
     "@testring/element-path": "0.4.56",
     "@testring/logger": "0.4.56",
     "@testring/pluggable-module": "0.4.56",
