--- a/packages/recorder-extension/static/manifest.json
+++ b/packages/recorder-extension/static/manifest.json
@@ -2,10 +2,8 @@
   "manifest_version": 2,
   "name": "TestRing",
   "author": "RingCentral",
-  "icons": {
-    "48": "icon.png"
-  },
-  "page_action": {
+  "description": "TestRing recording extension.",
+  "browser_action": {
     "default_title": "TestRing",
     "default_icon": "icon.png",
     "default_popup": "popup.html"
