--- a/packages/recorder-extension/static/manifest.json
+++ b/packages/recorder-extension/static/manifest.json
@@ -8,6 +8,7 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "options_page": "options.html",
   "background": {
     "scripts": [
       "background.bundle.js"
