--- a/packages/recorder-extension/static/manifest.json
+++ b/packages/recorder-extension/static/manifest.json
@@ -9,6 +9,7 @@
     "default_popup": "popup.html"
   },
   "options_page": "options.html",
+  "content_security_policy": "script-src 'self'; object-src 'self'",
   "background": {
     "scripts": [
       "background.bundle.js"
