--- a/packages/recorder-frontend/package.json
+++ b/packages/recorder-frontend/package.json
@@ -13,6 +13,8 @@
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
+    "@testring/client-ws-transport": "0.4.56",
+    "@testring/types": "0.4.56",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/webpack": "4.4.22",
