--- a/packages/recorder-extension/static/manifest.json
+++ b/packages/recorder-extension/static/manifest.json
@@ -14,7 +14,7 @@
     "scripts": [
       "background.bundle.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "content_scripts": [
     {
@@ -27,7 +27,8 @@
     }
   ],
   "permissions": [
-    "storage",
+    "webRequest",
+    "webRequestBlocking",
     "activeTab",
     "contextMenus",
     "tabs"
