--- a/packages/recorder-backend/package.json
+++ b/packages/recorder-backend/package.json
@@ -14,32 +14,25 @@
   },
   "dependencies": {
     "@testring/child-process": "0.4.56",
-    "@testring/constants": "0.4.56",
     "@testring/logger": "0.4.56",
     "@testring/pluggable-module": "0.4.56",
+    "@testring/recorder-extension": "0.4.56",
     "@testring/recorder-frontend": "0.4.56",
     "@testring/transport": "0.4.56",
     "@testring/types": "0.4.56",
     "@testring/utils": "0.4.56",
     "@types/babel-traverse": "6.25.4",
-    "@types/koa": "2.0.48",
-    "@types/koa-compose": "3.2.3",
-    "@types/koa-static": "4.0.1",
-    "@types/koa-views": "2.0.3",
+    "@types/express-serve-static-core": "4.16.2",
     "@types/node": "10.5.6",
     "@types/ws": "5.1.2",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "express": "4.16.4",
-    "koa": "2.7.0",
-    "koa-static": "5.0.0",
-    "koa-views": "6.1.5",
     "redux": "4.0.1",
     "ws": "6.0.0"
   },
   "devDependencies": {
     "@testring/test-utils": "0.4.56",
-    "nodemon": "1.18.9",
     "request": "2.87.0",
     "request-promise": "4.2.2",
     "ts-node": "7.0.1"
