--- a/packages/client-ws-transport/package.json
+++ b/packages/client-ws-transport/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@testring/client-ws-transport",
   "version": "0.4.56",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
     "type": "git",
