WIP: Base file movement recorder->devtool

--- a/packages/devtool-extension/package.json
+++ b/packages/devtool-extension/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@testring/recorder-frontend",
+  "name": "@testring/devtool-extension",
   "version": "0.4.56",
   "main": "./index.js",
+  "types": "./index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
@@ -15,16 +16,13 @@
   "devDependencies": {
     "@testring/client-ws-transport": "0.4.56",
     "@testring/types": "0.4.56",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
+    "@testring/utils": "0.4.56",
+    "@types/chrome": "0.0.69",
     "@types/webpack": "4.4.22",
-    "css-loader": "2.1.0",
-    "monaco-editor-webpack-plugin": "1.7.0",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-monaco-editor": "0.22.0",
-    "style-loader": "0.23.1",
+    "chrome-launcher": "0.10.5",
+    "copy-webpack-plugin": "5.0.2",
     "ts-loader": "5.3.3",
+    "ts-node": "7.0.1",
     "webpack": "4.28.4",
     "webpack-cli": "3.2.1"
   }
