--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "test:coverage": "nyc npm test",
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:publish",
-    "build": "npm run build:main && npm run build:recorder && npm run build:extension",
-    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|recorder-frontend|recorder-extension|ui-kit)\" -- tsc --target es2015",
-    "build:recorder": "lerna run --stream --scope @testring/recorder-frontend build",
-    "build:extension": "lerna run --stream --scope @testring/recorder-extension build",
-    "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|recorder-frontend|recorder-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch --inlineSourceMap",
+    "build": "npm run build:main && npm run build:devtool && npm run build:extension",
+    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc --target es2015",
+    "build:devtool": "lerna run --stream --scope @testring/devtool-frontend build",
+    "build:extension": "lerna run --stream --scope @testring/devtool-extension build",
+    "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch --inlineSourceMap",
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
