--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -25,6 +25,7 @@
     "react-monaco-editor": "0.22.0",
     "style-loader": "0.23.1",
     "ts-loader": "5.3.3",
+    "url-loader": "1.1.2",
     "webpack": "4.28.4",
     "webpack-cli": "3.2.1"
   }
