--- a/packages/devtool-backend/package.json
+++ b/packages/devtool-backend/package.json
@@ -2,6 +2,7 @@
   "name": "@testring/devtool-backend",
   "version": "0.5.2",
   "main": "./dist/index.js",
+  "types": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
@@ -16,6 +17,7 @@
     "@testring/child-process": "0.5.2",
     "@testring/devtool-extension": "0.5.2",
     "@testring/devtool-frontend": "0.5.2",
+    "@testring/devtool-store": "0.5.2",
     "@testring/logger": "0.5.2",
     "@testring/pluggable-module": "0.5.2",
     "@testring/transport": "0.5.2",
