--- a/package.json
+++ b/package.json
@@ -17,25 +17,24 @@
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
     "lint": "npm run lint:src && npm run lint:test",
     "lint:src": "lerna exec --parallel --ignore=\"@testring/@(e2e-test-app)\" -- eslint \"./src/**/*.[tj]s\"",
-    "lint:test": "lerna exec --parallel --no-sort --ignore=\"@testring/@(ui-kit|types)\" -- eslint ./test/**/*.[tj]s",
-    "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha --opts mocha.opts",
-    "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --opts mocha.opts --watch",
+    "lint:test": "lerna exec --parallel --no-sort --ignore=\"@testring/@(types)\" -- eslint ./test/**/*.[tj]s",
+    "test": "lerna exec --ignore=\"@testring/@(types|e2e-test-app)\" -- mocha --opts mocha.opts",
+    "test:watch": "lerna exec --ignore=\"@testring/@(types|e2e-test-app)\" --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:publish",
     "build": "npm run build:main && npm run build:devtool && npm run build:extension",
-    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc --target es2015",
+    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension)\" -- tsc --target es2015",
     "build:devtool": "lerna run --stream --scope @testring/devtool-frontend build",
     "build:extension": "lerna run --stream --scope @testring/devtool-extension build",
-    "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch --inlineSourceMap",
+    "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension)\" --parallel -- tsc --target es2015 --watch --inlineSourceMap",
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish:version": "lerna version --exact",
     "publish:ci": "node ./bin/publish.js",
-    "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
     "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
     "check-deps:root": "npm-check -u",
@@ -77,27 +76,27 @@
     "@lerna/project": "3.13.1",
     "@lerna/run-parallel-batches": "3.13.0",
     "@types/chai": "4.1.7",
-    "@types/mocha": "5.2.5",
+    "@types/mocha": "5.2.6",
     "@types/node": "10.5.6",
+    "@typescript-eslint/parser": "1.8.0",
     "babel-eslint": "10.0.1",
     "chai": "4.2.0",
-    "coveralls": "3.0.2",
-    "eslint": "5.12.0",
+    "coveralls": "3.0.3",
+    "eslint": "5.16.0",
     "eslint-config-ringcentral": "0.3.1",
-    "eslint-plugin-react": "7.9.1",
+    "eslint-plugin-react": "7.13.0",
     "eslint-plugin-typescript": "0.14.0",
-    "glob": "7.1.3",
-    "lerna": "3.13.1",
-    "lerna-update-wizard": "0.11.1",
-    "mocha": "5.2.0",
+    "glob": "7.1.4",
+    "lerna": "3.13.4",
+    "lerna-update-wizard": "0.14.0",
+    "mocha": "6.1.4",
     "npm-check": "5.9.0",
     "npm-utils": "2.0.3",
-    "nyc": "13.1.0",
+    "nyc": "14.1.1",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.3",
-    "sinon": "7.2.2",
-    "ts-node": "7.0.1",
-    "typescript": "3.1.1",
-    "typescript-eslint-parser": "21.0.2"
+    "sinon": "7.3.2",
+    "ts-node": "8.1.0",
+    "typescript": "3.4.5"
   }
 }
