--- a/packages/devtool-extension/package.json
+++ b/packages/devtool-extension/package.json
@@ -11,19 +11,20 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.ts",
+    "build:crx": "webpack --config webpack.config.ts --enable-crx",
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
     "@testring/client-ws-transport": "0.5.2",
     "@testring/types": "0.5.2",
     "@testring/utils": "0.5.2",
-    "@types/chrome": "0.0.69",
-    "@types/webpack": "4.4.22",
-    "chrome-launcher": "0.10.5",
-    "copy-webpack-plugin": "5.0.2",
-    "ts-loader": "5.3.3",
-    "ts-node": "7.0.1",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1"
+    "@types/chrome": "0.0.83",
+    "@types/webpack": "4.4.31",
+    "chrome-launcher": "0.10.7",
+    "copy-webpack-plugin": "5.0.3",
+    "ts-loader": "6.0.0",
+    "ts-node": "8.1.0",
+    "webpack": "4.31.0",
+    "webpack-cli": "3.3.2"
   }
 }
