Added chai to all repos

--- a/packages/child-process/package.json
+++ b/packages/child-process/package.json
@@ -12,5 +12,8 @@
     "@testring/utils": "0.5.2"
   },
   "author": "RingCentral",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "4.2.0"
+  }
 }
