--- a/packages/browser-proxy/package.json
+++ b/packages/browser-proxy/package.json
@@ -21,6 +21,7 @@
     "yargs": "12.0.2"
   },
   "devDependencies": {
-    "@testring/test-utils": "0.5.2"
+    "@testring/test-utils": "0.5.2",
+    "chai": "4.2.0"
   }
 }
