--- a/packages/cli-config/package.json
+++ b/packages/cli-config/package.json
@@ -17,5 +17,8 @@
     "@types/yargs": "12.0.0",
     "deepmerge": "2.1.1",
     "yargs": "12.0.2"
+  },
+  "devDependencies": {
+    "chai": "4.2.0"
   }
 }
