--- a/packages/dependencies-builder/package.json
+++ b/packages/dependencies-builder/package.json
@@ -17,5 +17,8 @@
     "@types/babylon": "6.16.3",
     "babel-traverse": "6.26.0",
     "babylon": "6.18.0"
+  },
+  "devDependencies": {
+    "chai": "4.2.0"
   }
 }
