--- a/packages/devtool-backend/package.json
+++ b/packages/devtool-backend/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@testring/test-utils": "0.5.2",
+    "chai": "4.2.0",
     "request": "2.87.0",
     "request-promise": "4.2.2",
     "ts-node": "7.0.1"
