--- a/packages/fs-reader/package.json
+++ b/packages/fs-reader/package.json
@@ -14,5 +14,8 @@
     "@testring/pluggable-module": "0.5.2",
     "@testring/types": "0.5.2",
     "glob": "7.1.2"
+  },
+  "devDependencies": {
+    "chai": "4.2.0"
   }
 }
