--- a/packages/pluggable-module/package.json
+++ b/packages/pluggable-module/package.json
@@ -11,5 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@testring/types": "0.5.2"
+  },
+  "devDependencies": {
+    "chai": "4.2.0"
   }
 }
