--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -15,6 +15,7 @@
     "babel-core": "6.26.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "6.24.1"
+    "babel-preset-es2015": "6.24.1",
+    "chai": "4.2.0"
   }
 }
