--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -14,5 +14,8 @@
     "@testring/types": "0.5.2",
     "@testring/utils": "0.5.2",
     "@types/node": "10.5.6"
+  },
+  "devDependencies": {
+    "chai": "4.2.0"
   }
 }
