Monaco editor versions fixes

--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -18,11 +18,12 @@
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/webpack": "4.4.31",
-    "css-loader": "2.1.1",
+    "css-loader": "1.0.1",
+    "monaco-editor": "0.15.6",
     "monaco-editor-webpack-plugin": "1.7.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-monaco-editor": "0.25.1",
+    "react-monaco-editor": "0.24.1",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.0",
     "url-loader": "1.1.2",
