test(WAT-647): Integration the sonarcloud to Enhance TestRing Automated Code Analysis Workflow -- add sonar-scanner

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ cache:
   - $HOME/.npm
   - node_modules
 
-script: xvfb-run npm run build:ci
+script:
+  - xvfb-run npm run build:ci
+  - sonar-scanner
 
 stages:
   - test
