test(WAT-647): Integration the sonarcloud to Enhance TestRing Automated Code Analysis Workflow -- fix sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=danbao_testring
 sonar.sources=packages/**/src
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
-sonar.tests=packages/**/test
+sonar.tests=**/test
 sonar.test.inclusions=packages/**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.tsconfigPath=tsconfig.json
