test(WAT-647): Integration the sonarcloud to Enhance TestRing Automated Code Analysis Workflow -- fix sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=danbao_testring
-sonar.sources=packages/**/src
+sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.test.inclusions=packages/**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
