test(WAT-647): Integration the sonarcloud to Enhance TestRing Automated Code Analysis Workflow -- change the token to ringcentral

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,11 @@
-sonar.projectKey=danbao_testring
+sonar.projectKey=ringcentral_testring
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.test.inclusions=packages/**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.tsconfigPath=tsconfig.json
+
+sonar.links.homepage=https://github.com/ringcentral/testring
+sonar.links.ci=https://travis-ci.org/ringcentral/testring
+sonar.links.scm=https://github.com/ringcentral/testring
+sonar.links.issue=https://github.com/ringcentral/testring/issues
