--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "publish:version": "lerna version --exact",
     "publish:ci": "node ./bin/publish.js",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
-    "check-deps": "check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
+    "check-deps": "npm run check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
     "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
     "check-deps:root": "npm-check -u",
     "check-deps:packages": "lerna exec --no-bail -- npm-check --no-color --no-emoji --ignore @testring/*",
@@ -78,7 +78,7 @@
     "@lerna/run-parallel-batches": "3.13.0",
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
-    "@types/node": "10.5.6",
+    "@types/node": "12.12.20",
     "babel-eslint": "10.0.1",
     "chai": "4.2.0",
     "coveralls": "3.0.2",
@@ -96,8 +96,8 @@
     "pre-commit": "1.2.2",
     "rimraf": "2.6.3",
     "sinon": "7.2.2",
-    "ts-node": "7.0.1",
-    "typescript": "3.1.1",
-    "typescript-eslint-parser": "21.0.2"
+    "ts-node": "8.5.4",
+    "typescript": "3.7.3",
+    "typescript-eslint-parser": "22.0.0"
   }
 }
