--- a/packages/async-breakpoints/package.json
+++ b/packages/async-breakpoints/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/ringcentral/testring/issues"
   },
   "devDependencies": {
+    "@types/node": "12.12.21",
     "chai": "4.2.0"
   }
 }
