--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,5 +24,8 @@
     "@testring/web-application": "0.5.14",
     "@types/yargs": "12.0.0",
     "yargs": "12.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "12.12.21"
   }
 }
