--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,5 +8,8 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "12.12.21"
+  }
 }
