--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -17,11 +17,11 @@
     "@testring/transport": "0.5.14",
     "@testring/types": "0.5.14",
     "@testring/utils": "0.5.14",
-    "@types/node": "10.5.6",
     "chai": "4.2.0"
   },
   "devDependencies": {
     "@testring/child-process": "0.5.14",
-    "@testring/test-utils": "0.5.14"
+    "@testring/test-utils": "0.5.14",
+    "@types/node": "12.12.21"
   }
 }
